<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".Register">

    <!--<TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="BBPP BERBAGI TEKNIK"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="REGISTER"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--<TextView
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Username :"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/inuser"
        app:layout_constraintTop_toBottomOf="@+id/register" />-->

    <EditText
        android:id="@+id/inuser"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        android:background="@drawable/edittext_bg"
        android:hint="@string/username" />

    <!--<TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Email :"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/inemail"
        app:layout_constraintTop_toBottomOf="@+id/inuser" />-->

    <EditText
        android:id="@+id/inemail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inuser" />

    <!--<TextView
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Password :"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/inpass"
        app:layout_constraintTop_toBottomOf="@+id/inemail" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inpass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inemail"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/inpass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/Password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inemail" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--<TextView
        android:id="@+id/confirmpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Confirm Password :"
        android:textColor="#FFFFFF"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/inconfirmpass"
        app:layout_constraintTop_toBottomOf="@+id/inpass" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inconfirmpass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inpass1"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/inconfirmpass"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inpass1" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--<Button
        android:id="@+id/btnregister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:hint="Registrasi"
        android:textColorHint="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inconfirmpass1" />-->

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/yellow"
        app:cardCornerRadius="13dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inconfirmpass1">

        <RelativeLayout
            android:id="@+id/btnregister"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/Register"
                android:textSize="18dp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>